# uhyve

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .rustfmt.toml  .travis.yml  CITATION.cff  Cargo.toml  LICENSE  README.md  bors.toml  codecov.yml  config.toml  coverage_rustcwrapper.sh  generate_test_coverage.sh  rust-toolchain.toml  setup_tests.sh  tests.sh  tests_inside_docker.sh
.cargo/: config.toml
.github/: dependabot.yml  labeler.yml
.github/actions/setup-target/: action.yml
.github/workflows/: build.yml  ci.yml  clippy.yml  format.yml  kvm.yml  labeler.yaml  release.yml  test.yml
benches/: benchmarks.rs  complete_binary.rs  network.rs  vm.rs
benches/benches/: complete_binary.rs  mod.rs  network.rs  vm.rs
benches/complete_binary/: mod.rs
benches/vm/: mod.rs
benches_data/: hello_world  rusty-loader  rusty_demo
data/: README.md  sample_config.toml
data/0.11.0/arm64/: hello_world
data/0.6.0/x86_64/: hello_c  hello_world  rusty_demo
data/aarch64/: hello_world
data/x86_64/: hello_c  hello_world  hello_world.toml  rusty_demo
hermit-image-reader/: Cargo.toml  README.md
hermit-image-reader/examples/: hermit-image-info.rs
hermit-image-reader/src/: config.rs  filename.rs  lib.rs  tar_parser.rs  thin_tree.rs
scripts/: README.md  build_data_images.sh  run_images.sh
src/: args.rs  bin_utils.rs  consts.rs  debug_manager.rs  error.rs  fdt.rs  gdb_parser.rs  hypercall.rs  isolation.rs  lib.rs  macros.rs  main.rs  mem.rs  paging.rs  params.rs  parking.rs  pci.rs  serial.rs  shared_queue.rs  stats.rs  utils.rs  vcpu.rs  virtio.rs  virtqueue.rs  vm.rs
src/arch/: mod.rs  x86.rs
src/arch/aarch64/: mod.rs
src/arch/x86_64/: mod.rs  paging.rs
src/arch/x86_64/paging/: mod.rs
src/arch/x86_64/registers/: debug.rs  debug_vendor.rs  mod.rs
src/gdb/: base.rs  mod.rs  resume.rs
src/hypercall/: fstat.rs  getdents.rs  mkdir.rs  mod.rs
src/isolation/: fd.rs  fdmap.rs  filemap.rs  image.rs  landlock.rs  mod.rs  seccomp.rs  tempdir.rs
src/isolation/filemap/: mod.rs  tests.rs  tree.rs
src/linux/: ehyve.rs  fs.rs  gdb.rs  i386-64bit.xml  mem.rs  mod.rs  uhyve.rs  vcpu.rs  virtio.rs  virtqueue.rs
src/linux/arch/: mod.rs
src/linux/arch/riscv/: consts.rs  mod.rs  vcpu.rs
src/linux/arch/x86_64/: mod.rs  vcpu.rs
src/linux/gdb/: breakpoints.rs  mod.rs  regs.rs  resume.rs  section_offsets.rs
src/linux/x86_64/: kvm_cpu.rs  mod.rs  virtio_device.rs
src/macos/: ehyve.rs  fs.rs  gdb.rs  ioapic.rs  mod.rs  uhyve.rs  vcpu.rs  xhyve.rs
src/macos/aarch64/: mod.rs  uhyve.rs  vcpu.rs  virtio_device.rs
src/macos/gdb/: breakpoints.rs  mod.rs
src/macos/x86_64/: ioapic.rs  mod.rs  uhyve.rs  vcpu.rs
src/net/: macvtap.rs  mod.rs  tap.rs
src/net/virtio/: capabilities.rs  config.rs  mod.rs  offsets.rs  pci.rs
src/virtio/: capabilities.rs  mod.rs  net.rs  pci.rs  virtqueue.rs
src/windows/: ehyve.rs  vcpu.rs
src/x86_64/: ehyve.rs  mod.rs  uhyve.rs  vcpu.rs
tests/: common.rs  env.rs  fs-test.rs  gdb.rs  memory.rs  multicore.rs  network-test.rs  panic.rs  serial.rs  virtual_fd_test.rs
tests/data/fixtures/fs/: README.md  hello_world.hermit  this_symlink_is_dangling  this_symlink_is_valid  this_symlink_leads_to_a_file
tests/data/fixtures/fs/testdir3/: testfile_c.txt
tests/data/fixtures/fs/this_folder_exists/: file_in_folder.txt
tests/test-kernels/: Cargo.toml  rust-toolchain.toml
tests/test-kernels/.cargo/: config.toml
tests/test-kernels/src/: hypercall.rs  lib.rs
uhypercall-interface/: Cargo.toml
uhypercall-interface/src/: lib.rs
uhyve-interface/: Cargo.toml  README.md
uhyve-interface/src/: elf.rs  lib.rs  parameters.rs  prelude.rs
uhyve-interface/src/v1/: mod.rs  parameters.rs
uhyve-interface/src/v2/: mod.rs  parameters.rs
