[workspace]
exclude = ["tests/test-kernels", "hermit-rs", "hermit-rs/*", "kernel"]

[package]
name = "uhyve"
version = "0.5.0"
authors = [
    "Stefan Lankes <slankes@eonerc.rwth-aachen.de>",
    "Martin Kröning <mkroening@posteo.net>",
    "Jonathan Klimt <jonathan.klimt@eonerc.rwth-aachen.de>",
    "Jens Breitbart <jbreitbart@gmail.com>",
]
edition = "2024"
description = "A specialized hypervisor for Hermit"
repository = "https://github.com/hermit-os/uhyve"
license = "MIT OR Apache-2.0"
keywords = ["hypervisor", "unikernel"]
categories = ["os"]
exclude = [
    "/.github/",
    "/img/",
    "/benches/",
    "/data",
    "/.gitattributes",
    "/.gitignore",
    "/.gitmodules",
    "/codecov.yml",
    "/tests"
]

[profile.release]
codegen-units = 1
lto           = "thin"
panic         = "abort"

[lib]
name = "uhyvelib"

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[features]
default = ["aslr"]
aslr = ["dep:rand"]
instrument = ["rftrace", "rftrace-frontend"]

[dependencies]
align-address = "0.3.0"
byte-unit = { version = "5", features = ["byte", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clean-path = "0.2.1"
core_affinity = "0.8"
env_logger = "0.11"
gdbstub = "0.7"
gdbstub_arch = "0.3"
hermit-entry = { version = "0.10.4", features = ["loader"] }
libc = "0.2"
log = "0.4"
mac_address = "1.1"
nix = { version = "0.30", features = ["mman", "pthread", "signal"] }
thiserror = "2.0.17"
time = "0.3"
tun-tap = { version = "0.1.3", default-features = false }
uhyve-interface = { version = "0.1.3", path = "uhyve-interface", features = ["std"] }
virtio-bindings = { version = "0.2", features = ["virtio-v4_14_0"] }
rftrace = { version = "0.3", optional = true }
rftrace-frontend = { version = "0.3", optional = true }
rand = { version = "0.9", optional = true }
shell-words = "1"
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }
vm-fdt = "0.3"
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["fast-rng", "v4"]}
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
merge = { version = "0.2" }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = "0.14"
kvm-ioctls = "0.24"
landlock = "0.4.3"
vmm-sys-util = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
xhypervisor = { version = "0.3.0", features = ["macos_15_0_0"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15", default-features = false }
raw-cpuid = "11"
memory_addresses = { version = "0.2.3", default-features = false, features = [
  "conversions",
  "x86_64",
] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
bitflags = "2.9"
memory_addresses = { version = "0.2.3", default-features = false, features = [
  "aarch64",
] }

[dev-dependencies]
criterion = "0.7"
home = "0.5"
regex = { version = "1.12.1", default-features = false, features = ["unicode-perl"] }
