[workspace]
exclude = ["tests/test-kernels", "hermit-rs", "hermit-rs/*", "kernel"]

[package]
name = "uhyve"
version = "0.7.0"
authors = ["The Hermit Project Developers"]
edition = "2024"
description = "A specialized hypervisor for Hermit"
repository = "https://github.com/hermit-os/uhyve"
license = "MIT OR Apache-2.0"
keywords = ["hypervisor", "unikernel"]
categories = ["os"]
exclude = [
    "/.github/",
    "/img/",
    "/benches/",
    "/data",
    "/.gitattributes",
    "/.gitignore",
    "/.gitmodules",
    "/codecov.yml",
    "/tests"
]

[lib]
name = "uhyvelib"

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[features]
instrument = ["dep:rftrace", "dep:rftrace-frontend"]

[dependencies]
align-address = "0.4"
byte-unit = { version = "5", features = ["byte", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clean-path = "0.2.1"
core_affinity = "0.8"
env_logger = "0.11"
gdbstub = "0.7"
gdbstub_arch = "0.3"
hermit-abi = "0.5"
hermit-entry = { version = "0.10.8", features = ["loader"] }
libc = "0.2"
log = "0.4"
mac_address = "1.1"
nix = { version = "0.31", features = ["mman", "pthread", "signal"] }
thiserror = "2.0.18"
time = "0.3"
tun-tap = { version = "0.1.3", default-features = false }
uhyve-interface = { version = "0.2.0", path = "uhyve-interface", features = ["std"] }
virtio-bindings = "~0.2.7"
vm-memory = { version = "0.18", features = ["backend-mmap"] }
rftrace = { version = "0.3", optional = true }
rftrace-frontend = { version = "0.3", optional = true }
rand = "0.10"
shell-words = "1"
sysinfo = { version = "0.38.0", default-features = false, features = ["system"] }
vm-fdt = "0.3"
tempfile = "3.25"
uuid = { version = "1.20.0", features = ["fast-rng", "v4"]}
toml = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
merge = "0.2"
yoke = "0.8"
nohash = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = "0.14"
kvm-ioctls = "0.24"
landlock = "0.4.4"
vmm-sys-util = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
xhypervisor = { version = "0.3.0", features = ["macos_15_0_0"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15", default-features = false }
raw-cpuid = "11"
memory_addresses = { version = "0.3", default-features = false, features = [
  "conversions",
  "x86_64",
] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
bitflags = "2.10"
memory_addresses = { version = "0.3", default-features = false, features = [
  "aarch64",
] }

[dev-dependencies]
criterion = "0.8"
home = "0.5"
regex = { version = "1.12.3", default-features = false, features = ["unicode-perl"] }
