[package]
name = "hermit-image-reader"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
std = ["compression/std"]

[dependencies]

[dependencies.byte-unit]
version = "5"
default-features = false
features = ["byte", "serde"]

[dependencies.compression]
version = "0.1"
default-features = false
features = ["gzip"]

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.serde]
version = "1"
default-features = false
features = ["alloc", "derive"]

[dependencies.toml]
version = "0.9"
default-features = false
features = ["parse", "serde"]
