[package]
name = "uhypercall-interface"
version = "0.1.0"
edition = "2021"
description = "The interface between uhyve and a guest VM"
repository = "https://github.com/hermitcore/uhyve"
license = "MIT/Apache-2.0"
keywords = ["hypervisor", "unikernel", "hermit"]
categories = ["os"]

[dependencies]
num_enum = { version = "0.5", default-features = false }
x86_64 = { version = "0.14", default-features = false }
