[package]
name = "uhyve-interface"
version = "0.2.0"
edition = "2024"
authors = ["The Hermit Project Developers"]
description = "The interface between uhyve and a guest VM"
repository = "https://github.com/hermit-os/uhyve"
license = "MIT OR Apache-2.0"
keywords = ["hypervisor", "unikernel", "hermit"]
categories = ["os"]

[dependencies]
hermit-abi = "0.5"
log = { version = "0.4", optional = true }
memory_addresses = "0.3"
num_enum = { version = "0.7", default-features = false }

[features]
std = ["dep:log"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15", default-features = false }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { version = "0.0.14", default-features = false }
