[package]
name = "uhyve-interface"
version = "0.2.0"
edition = "2024"
authors = [
  "Jonathan Klimt <jonathan.klimt@eonerc.rwth-aachen.de>",
  "Stefan Lankes <slankes@eonerc.rwth-aachen.de>",
]
description = "The interface between uhyve and a guest VM"
repository = "https://github.com/hermitcore/uhyve"
license = "MIT OR Apache-2.0"
keywords = ["hypervisor", "unikernel", "hermit"]
categories = ["os"]

[dependencies]
num_enum = { version = "0.7", default-features = false }
log = { version = "0.4", optional = true }
memory_addresses = "0.2.3"
bitflags = "2.6.0"

[features]
std = ["dep:log"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15", default-features = false }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { version = "0.0.14", default-features = false }
