[package]
name = "uhyve-test-kernels"
version = "0.1.0"
authors = [
  "Jonathan Klimt <jonathan.klimt@eonerc.rwth-aachen.de>",
  'Panagiotis "Ivory" Vasilopoulos <git@n0toose.net>',
]
edition = "2021"
publish = false

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = "0.9"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15", default-features = false, features = [
  "instructions",
] }

[dependencies]
uhyve-interface = { path = "../../uhyve-interface" }
