[package]
name = "uhyve-test-kernels"
version = "0.2.0"
authors = [
  "Jonathan Klimt <jonathan.klimt@eonerc.rwth-aachen.de>",
  'Panagiotis "Ivory" Vasilopoulos <git@n0toose.net>',
  "Ellen Emilia Anna Zscheile <fogti+devel@ytrizja.de>",
]
edition = "2024"
publish = false

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = "0.12"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15", default-features = false, features = [
  "instructions",
] }

[dependencies]
uhyve-interface = { path = "../../uhyve-interface" }

[patch.crates-io]
# temporary, as the kernel (which is automatically fetched and compile by
# the hermit wrapper crate) cannot be patched directly, as it is not seen
# by cargo. use https://github.com/hermit-os/kernel/pull/2013
hermit = { path = "../../../hermit-rs/hermit" }
